username fix
