# openapi/openapi0003.json
@@ -29,7 +29,7 @@
         "tags": [
           "Auth"
         ],
-        "operationId": "Auth_Register",
+        "operationId": "Register",
         "requestBody": {
           "content": {
             "application/json": {
@@ -154,7 +154,7 @@
         "tags": [
           "Auth"
         ],
-        "operationId": "Auth_Login",
+        "operationId": "Login",
         "requestBody": {
           "content": {
             "application/json": {
@@ -272,7 +272,7 @@
         "tags": [
           "Auth"
         ],
-        "operationId": "Auth_DeleteAccount",
+        "operationId": "DeleteAccount",
         "responses": {
           "204": {
             "description": "No Content"
@@ -305,7 +305,7 @@
         "tags": [
           "Collections"
         ],
-        "operationId": "Collections_GetMyCollections",
+        "operationId": "GetMyCollections",
         "responses": {
           "200": {
             "description": "OK",
@@ -344,7 +344,7 @@
         "tags": [
           "Collections"
         ],
-        "operationId": "Collections_Create",
+        "operationId": "Create",
         "requestBody": {
           "content": {
             "application/json": {
@@ -397,7 +397,7 @@
         "tags": [
           "Collections"
         ],
-        "operationId": "Collections_GetItems",
+        "operationId": "GetItems",
         "parameters": [
           {
             "name": "id",
@@ -605,7 +605,7 @@
         "tags": [
           "Collections"
         ],
-        "operationId": "Collections_AddItem",
+        "operationId": "AddItem",
         "parameters": [
           {
             "name": "id",
@@ -783,7 +783,7 @@
         "tags": [
           "Collections"
         ],
-        "operationId": "Collections_RemoveItem",
+        "operationId": "RemoveItem",
         "parameters": [
           {
             "name": "id",
@@ -963,7 +963,7 @@
         "tags": [
           "Feed"
         ],
-        "operationId": "Feed_GetGlobal",
+        "operationId": "GetGlobal",
         "parameters": [
           {
             "name": "cursor",
@@ -1022,7 +1022,7 @@
         "tags": [
           "Feed"
         ],
-        "operationId": "Feed_GetSubscriptions",
+        "operationId": "GetSubscriptions",
         "parameters": [
           {
             "name": "cursor",
@@ -1081,7 +1081,7 @@
         "tags": [
           "Feed"
         ],
-        "operationId": "Feed_GetUserFeed",
+        "operationId": "GetUserFeed",
         "parameters": [
           {
             "name": "username",
@@ -1148,7 +1148,7 @@
         "tags": [
           "Meta"
         ],
-        "operationId": "Meta_GetTags",
+        "operationId": "GetTags",
         "responses": {
           "200": {
             "description": "OK",
@@ -1187,7 +1187,7 @@
         "tags": [
           "Publications"
         ],
-        "operationId": "Publications_Create",
+        "operationId": "Create",
         "requestBody": {
           "content": {
             "application/x-www-form-urlencoded": {
@@ -1272,7 +1272,7 @@
         "tags": [
           "Publications"
         ],
-        "operationId": "Publications_Get",
+        "operationId": "Get",
         "parameters": [
           {
             "name": "id",
@@ -1379,7 +1379,7 @@
         "tags": [
           "Publications"
         ],
-        "operationId": "Publications_Delete",
+        "operationId": "Delete",
         "parameters": [
           {
             "name": "id",
@@ -1543,7 +1543,7 @@
         "tags": [
           "Publications"
         ],
-        "operationId": "Publications_ToggleLike",
+        "operationId": "ToggleLike",
         "parameters": [
           {
             "name": "id",
@@ -1604,7 +1604,7 @@
         "tags": [
           "Publications"
         ],
-        "operationId": "Publications_AddComment",
+        "operationId": "AddComment",
         "parameters": [
           {
             "name": "id",
@@ -1686,7 +1686,7 @@
         "tags": [
           "Publications"
         ],
-        "operationId": "Publications_GetComments",
+        "operationId": "GetComments",
         "parameters": [
           {
             "name": "id",
@@ -1754,7 +1754,7 @@
         "tags": [
           "Publications"
         ],
-        "operationId": "Publications_ToggleCommentLike",
+        "operationId": "ToggleCommentLike",
         "parameters": [
           {
             "name": "id",
@@ -1824,7 +1824,7 @@
         "tags": [
           "Publications"
         ],
-        "operationId": "Publications_CreateAssessment",
+        "operationId": "CreateAssessment",
         "parameters": [
           {
             "name": "id",
@@ -1886,7 +1886,7 @@
         "tags": [
           "Publications"
         ],
-        "operationId": "Publications_GetAssessments",
+        "operationId": "GetAssessments",
         "parameters": [
           {
             "name": "id",
@@ -1927,7 +1927,7 @@
         "tags": [
           "Search"
         ],
-        "operationId": "Search_SearchPublications",
+        "operationId": "SearchPublications",
         "parameters": [
           {
             "name": "query",
@@ -2004,7 +2004,7 @@
         "tags": [
           "Search"
         ],
-        "operationId": "Search_SearchUsers",
+        "operationId": "SearchUsers",
         "parameters": [
           {
             "name": "query",
@@ -2062,7 +2062,7 @@
         "tags": [
           "Search"
         ],
-        "operationId": "Search_SearchCollections",
+        "operationId": "SearchCollections",
         "parameters": [
           {
             "name": "query",
@@ -2120,7 +2120,7 @@
         "tags": [
           "Users"
         ],
-        "operationId": "Users_GetMe",
+        "operationId": "GetMe",
         "responses": {
           "200": {
             "description": "OK",
@@ -2148,7 +2148,7 @@
         "tags": [
           "Users"
         ],
-        "operationId": "Users_UpdateProfile",
+        "operationId": "UpdateProfile",
         "requestBody": {
           "content": {
             "application/json": {
@@ -2181,7 +2181,7 @@
         "tags": [
           "Users"
         ],
-        "operationId": "Users_UpdateAvatar",
+        "operationId": "UpdateAvatar",
         "requestBody": {
           "content": {
             "application/x-www-form-urlencoded": {
@@ -2209,7 +2209,7 @@
         "tags": [
           "Users"
         ],
-        "operationId": "Users_Search",
+        "operationId": "Search",
         "parameters": [
           {
             "name": "query",
@@ -2267,7 +2267,7 @@
         "tags": [
           "Users"
         ],
-        "operationId": "Users_GetByUsername",
+        "operationId": "GetByUsername",
         "parameters": [
           {
             "name": "username",
@@ -2375,7 +2375,7 @@
         "tags": [
           "Users"
         ],
-        "operationId": "Users_Follow",
+        "operationId": "Follow",
         "parameters": [
           {
             "name": "id",
@@ -2397,7 +2397,7 @@
         "tags": [
           "Users"
         ],
-        "operationId": "Users_Unfollow",
+        "operationId": "Unfollow",
         "parameters": [
           {
             "name": "id",
@@ -2421,7 +2421,7 @@
         "tags": [
           "Users"
         ],
-        "operationId": "Users_GetFollowers",
+        "operationId": "GetFollowers",
         "parameters": [
           {
             "name": "id",
@@ -2491,7 +2491,7 @@
         "tags": [
           "Users"
         ],
-        "operationId": "Users_GetFollowing",
+        "operationId": "GetFollowing",
         "parameters": [
           {
             "name": "id",
@@ -2561,7 +2561,7 @@
         "tags": [
           "Users"
         ],
-        "operationId": "Users_GetMyPreferences",
+        "operationId": "GetMyPreferences",
         "responses": {
           "200": {
             "description": "OK",
@@ -2598,7 +2598,7 @@
         "tags": [
           "Users"
         ],
-        "operationId": "Users_SetMyPreferences",
+        "operationId": "SetMyPreferences",
         "requestBody": {
           "content": {
             "application/json": {
@@ -2643,7 +2643,7 @@
         "tags": [
           "Wardrobe"
         ],
-        "operationId": "Wardrobe_Add",
+        "operationId": "Add",
         "requestBody": {
           "content": {
             "application/x-www-form-urlencoded": {
@@ -2723,7 +2723,7 @@
         "tags": [
           "Wardrobe"
         ],
-        "operationId": "Wardrobe_Get",
+        "operationId": "Get",
         "parameters": [
           {
             "name": "query",
@@ -2791,7 +2791,7 @@
         "tags": [
           "Wardrobe"
         ],
-        "operationId": "Wardrobe_Delete",
+        "operationId": "Delete",
         "parameters": [
           {
             "name": "id",
